Upgrade details res window
When edit then close res details window, res list view reloads but data does not change

--- a/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
+++ b/HotelManagement/HotelManagement/Views/Reservation/ReservationDetailsWindow.xaml
@@ -505,9 +505,11 @@
                                 </Button>
                             </Grid>
 
-                            <DataGrid Height="200"
+                            <DataGrid 
+                                Height="200"
                                 ItemsSource="{Binding Sharers}"
                                 CanUserResizeColumns="False" 
+                                IsReadOnly="True"
                                 CanUserAddRows="False"
                                 AutoGenerateColumns="False"
                                 HeadersVisibility="All">
