--- a/HotelManagement/HotelManagement/Views/ServicesView.xaml
+++ b/HotelManagement/HotelManagement/Views/ServicesView.xaml
@@ -28,18 +28,27 @@
                         <RowDefinition Height="auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                        <TextBlock Grid.Row="0" Text="New service" Margin="8" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
-                        <TextBlock Grid.Row="1" Text="{Binding Title}" Margin="8 4 4 12"/>
+                        <TextBlock Grid.Row="0" Text="{Binding DialogTitle}" Margin="8" FontSize="20" FontWeight="Bold" VerticalAlignment="Center"/>
+                        <!--<TextBlock Grid.Row="1" Text="{Binding DialogTitle}" Margin="8 4 4 12"/>-->
                         <TextBox Grid.Row="2" Margin="4"
-                                Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                                VerticalAlignment="Top" 
-                                AcceptsReturn="True" Text="{Binding ServiceName}"
-                                materialDesign:HintAssist.Hint="Service's name"/>
-                        <TextBox Grid.Row="3" Margin="4"
+                                 Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                                 VerticalAlignment="Top" 
+                                 AcceptsReturn="True" Text="{Binding ServiceName}"
+                                 IsReadOnly="{Binding IsReadOnlyServiceName}"
+                                 materialDesign:HintAssist.Hint="Service's name"/>
+                        <TextBox x:Name="txbPrice"
+                            Grid.Row="3" Margin="4"
                             Style="{StaticResource MaterialDesignOutlinedTextBox}"
                             VerticalAlignment="Top" 
                             AcceptsReturn="True" Text="{Binding ServicePrice}"
-                            materialDesign:HintAssist.Hint="Service's price"/>
+                            materialDesign:HintAssist.Hint="Service's price">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="PreviewTextInput">
+                                    <ei:CallMethodAction TargetObject="{Binding}"
+                                                         MethodName="NumberValidationTextBox"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </TextBox>
                         <TextBlock Grid.Row="4" Text="{Binding ErrorMessage}" Margin="0 0 0 4" HorizontalAlignment="Center" FontSize="14" Foreground="Red"/>
                         <Grid Grid.Row="5">
                         <Grid.ColumnDefinitions>
@@ -145,7 +154,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
                             <materialDesign:DataGridTextColumn
-                            Header="Name" Binding="{Binding name}" 
+                            Header="Name" Binding="{Binding name}" IsReadOnly="True"
                             >
                                 <DataGridTextColumn.HeaderStyle>
                                     <Style TargetType="{x:Type DataGridColumnHeader}"
@@ -164,7 +173,7 @@
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
                             <materialDesign:DataGridTextColumn
-                            Header="Price" Binding="{Binding price}" 
+                            Header="Price" Binding="{Binding price}" IsReadOnly="True"
                             >
                                 <DataGridTextColumn.HeaderStyle>
                                     <Style TargetType="{x:Type DataGridColumnHeader}"
@@ -182,6 +191,17 @@
                                     </Style>
                                 </DataGridTextColumn.ElementStyle>
                             </materialDesign:DataGridTextColumn>
+                            <DataGridTemplateColumn >
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button Width="40" Padding="0" Background="#637BCF"
+                                        Style="{StaticResource MaterialDesignRaisedButton}"
+                                        Command="{Binding RelativeSource={RelativeSource AncestorType=DataGrid}, Path=DataContext.EditServiceCommand}">
+                                            <materialDesign:PackIcon Kind="Tools"/>
+                                        </Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                             <DataGridTemplateColumn >
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
